Temp/kubernetes/deployment/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fd-service-ingress
spec:
  rules:
  - host: myingress.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fd-service-service
            port:
              number: 80
